<resources>
    <string name="app_name">Zro News</string>
    <string name="action_signin">Entrar</string>
    <string name="action_signup">Criar conta</string>
    <string name="title_signin">Entrar</string>
    <string name="hint_username">Nome</string>
    <string name="hint_password">Senha</string>
    <string name="action_continue">Continuar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_signup">Criar conta</string>
    <string name="hint_name">Nome</string>
    <string name="hint_password_confirm">Senha novamente</string>
    <string name="hint_email">E-mail</string>
    <string name="title_highlights">Mais vistas</string>
    <string name="title_last_news">Últimas notícias</string>
    <string name="tools_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>